src/TestFiles/ASTTests/SyntaxErrorTests/tests/test17.c
int main() {
const x = 5;
}
